syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//商品表
service MallProduct {
  //商品表-创建一条数据
  rpc CreateMallProduct(CreateMallProductReq) returns (CreateMallProductReply) {
    option (google.api.http) = {
      post: "/admin/v1/mall_product/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //商品表-更新一条数据
  rpc UpdateMallProduct(UpdateMallProductReq) returns (UpdateMallProductReply) {
    option (google.api.http) = {
      post: "/admin/v1/mall_product/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //商品表-更新状态
  rpc UpdateMallProductStatus(UpdateMallProductStatusReq) returns (UpdateMallProductStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/mall_product/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //商品表-删除一条数据
  rpc DeleteMallProduct(DeleteMallProductReq) returns (DeleteMallProductReply) {
    option (google.api.http) = {
      post: "/admin/v1/mall_product/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //商品表-单条数据查询
  rpc GetMallProductInfo(GetMallProductInfoReq) returns (GetMallProductInfoReply) {
    option (google.api.http) = {get: "/admin/v1/mall_product/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //商品表-列表数据查询
  rpc GetMallProductList(GetMallProductListReq) returns (GetMallProductListReply) {
    option (google.api.http) = {get: "/admin/v1/mall_product/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //商品表-选择器
  rpc GetMallProductSelector(GetMallProductSelectorReq) returns (GetMallProductSelectorReply) {
    option (google.api.http) = {get: "/admin/v1/mall_product/selector"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}

//会员配置
message MembershipConfig {
  string membershipType = 1; // 会员类型编码(normal,vip,svip)
  int32 duration_days = 2; // 时长天数
}

//商品配置
message ProductConfig {
  MembershipConfig membership = 1; // 会员配置
}

//商品表信息
message MallProductInfo {
  string id = 1; // id
  string productType = 2; // 商品类型(membership:会员,service:服务,goods:商品)
  string productName = 3; // 商品名称
  string productDesc = 4; // 商品描述
  repeated string productImages = 5; // 商品图片(多个用逗号分隔)
  repeated string productDetail = 6; // 商品详情(JSON格式,包含特色功能等)
  ProductConfig productConfig = 7; // 商品配置(JSON格式)
  double originalPrice = 8; // 原价
  double currentPrice = 9; // 现价
  int32 stockQuantity = 10; // 库存数量(-1表示无限库存)
  int32 soldQuantity = 11; // 已售数量
  int32 sort = 12; // 排序
  int32 status = 13; // 状态(-1下架,0待上架,1在售,2售罄)
  string createdAt = 14; // 创建时间
  string updatedAt = 15; // 更新时间
}

//请求-商品表-创建一条数据
message CreateMallProductReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "productType",
        "productName",
        "originalPrice",
        "currentPrice",
        "status"
      ]
    }
  };
  string productType = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
  }]; // 商品类型(membership:会员,service:服务,goods:商品)
  string productName = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }]; // 商品名称
  string productDesc = 3 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 500
    }
  ]; // 商品描述
  repeated string productImages = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 10
    }
  ]; // 商品图片(多个用逗号分隔)
  repeated string productDetail = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 10
    }
  ]; // 商品详情(JSON格式,包含特色功能等)
  ProductConfig productConfig = 6 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 商品配置(JSON格式)
  double originalPrice = 7; // 原价
  double currentPrice = 8; // 现价
  int32 stockQuantity = 9 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 库存数量(-1表示无限库存)
  int32 soldQuantity = 10 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 已售数量
  int32 sort = 11 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 排序
  int32 status = 12; // 状态(-1下架,0待上架,1在售,2售罄)
}

//响应-商品表-创建一条数据
message CreateMallProductReply {
  string id = 1; // id
}

//请求-商品表-更新一条数据
message UpdateMallProductReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "productType",
        "productName",
        "originalPrice",
        "currentPrice",
        "status"
      ]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  string productType = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
  }]; // 商品类型(membership:会员,service:服务,goods:商品)
  string productName = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }]; // 商品名称
  string productDesc = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 500
    }
  ]; // 商品描述
  repeated string productImages = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 10
    }
  ]; // 商品图片(多个用逗号分隔)
  repeated string productDetail = 6 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).repeated = {
      min_items: 1
      max_items: 10
    }
  ]; // 商品详情(JSON格式,包含特色功能等)
  ProductConfig productConfig = 7 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 商品配置(JSON格式)
  double originalPrice = 8; // 原价
  double currentPrice = 9; // 现价
  int32 stockQuantity = 10 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 库存数量(-1表示无限库存)
  int32 soldQuantity = 11 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 已售数量
  int32 sort = 12 [(buf.validate.field).ignore = IGNORE_IF_UNPOPULATED]; // 排序
  int32 status = 13; // 状态(-1下架,0待上架,1在售,2售罄)
}

//响应-商品表-更新一条数据
message UpdateMallProductReply {}

//请求-商品表-更新状态
message UpdateMallProductStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "status"
      ]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  int32 status = 2; // 状态(-1下架,0待上架,1在售,2售罄)
}

//响应-商品表-更新状态
message UpdateMallProductStatusReply {}

//请求-商品表-删除一条数据
message DeleteMallProductReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-商品表-删除一条数据
message DeleteMallProductReply {}

//请求-商品表-单条数据查询
message GetMallProductInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-商品表-单条数据查询
message GetMallProductInfoReply {
  MallProductInfo info = 1;
}

//请求-商品表-列表数据查询
message GetMallProductListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1 [(buf.validate.field).int32 = {gte: 1}]; //页码
  int32 pageSize = 2 [(buf.validate.field).int32 = {
    gte: 1
    lte: 1000
  }]; //页数
  string productType = 3; // 商品类型(membership:会员,service:服务,goods:商品)
  string productName = 4; // 商品名称
}

//响应-商品表-列表数据查询
message GetMallProductListReply {
  int32 total = 1; //总数
  repeated MallProductInfo list = 2; // 列表数据
}

//商品表选择器
message MallProductSelector {
  string id = 1; // id
  string productName = 2; // 商品名称
}

//请求-商品表-选择器
message GetMallProductSelectorReq {
  string searchName = 1; // 搜索商品名称
}

//响应-商品表-选择器
message GetMallProductSelectorReply {
  repeated MallProductSelector list = 1; // 列表数据
}
